[project]
name = "darbiadev-ups"
version = "0.6.5"
description = "A wrapper for UPS' API"
readme = "README.md"
authors = [
    { name = "Bradley Reynolds", email = "bradley.reynolds@darbia.dev" },
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "requests",
    "darbiadev-utilities",
    "typing-extensions",
]

[project.urls]
repository = "https://github.com/darbiadev/darbiadev-ups/"
documentation = "https://docs.darbia.dev/darbiadev-ups/"

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pylint",
]
tests = [
    "pytest",
]
docs = [
    "sphinx",
    "sphinxcontrib-autoprogram",
    "sphinx-rtd-theme",
    "toml",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.sphinx]
copyright = "Darbia"
author = "Bradley Reynolds"
api_dir = "darbiadev_ups"

[tool.black]
target-version = ["py310"]
line-length = 120

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "tests -r a -v --doctest-modules src"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = "R1705, R0912, R0913, R0914, R0801, C0103"
# justifications:
# R1705 (no-else-return) - else-return returns error
# R0913 (too-many-arguments) - lots of inconsistencies in the API's responses
# R0913 (too-many-arguments) - addresses have lots of fields
# R0914 (too-many-locals) - addresses have lots of fields
# R0801 (duplicate-code) - FIXME: detecting withing the same file?
# C0103 (invalid-name) - FIXME: false positive?
