[project]
name = "darbiadev-ups"
version = "0.7.0"
description = "A wrapper for UPS' API"
readme = "README.md"
authors = [
    { name = "Bradley Reynolds", email = "bradley.reynolds@darbia.dev" },
]
license = { text = "MIT" }
requires-python = ">=3.8"
dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
repository = "https://github.com/darbiadev/darbiadev-ups/"
documentation = "https://darbia.dev/darbiadev-ups/"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic.dependencies]
file = ["requirements/requirements.txt"]

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements/requirements-dev.txt"] }
tests = { file = ["requirements/requirements-tests.txt"] }
docs = { file = ["requirements/requirements-docs.txt"] }

[tool.black]
target-version = ["py38"]
line-length = 120

[tool.ruff]
target-version = "py38"
line-length = 120
select = ["ALL"]
ignore = []

[tool.ruff.extend-per-file-ignores]
"docs/*" = [
    "INP001", # (File `tests/*.py` is part of an implicit namespace package. Add an `__init__.py`.) - Docs are not modules
]
"tests/*" = [
    "INP001", # (File `tests/*.py` is part of an implicit namespace package. Add an `__init__.py`.) - Tests are not modules
    "S101", # (Use of `assert` detected) - Yes, that's the point
]

[tool.ruff.pydocstyle]
convention = "numpy"
